--- a/gulp-maxgraph/src/partials/hero.html
+++ b/gulp-maxgraph/src/partials/hero.html
@@ -9,6 +9,6 @@
          Мы&nbsp;продаем кроссовки брендов Nike, Adidas, Puma, Reebok, Converse и&nbsp;многие другие по&nbsp;низким
          ценам
       </p>
-      <button class="btn-reset btn btn--primary js-move-to">Перейти к покупкам</button>
+      <button class="hero__btn btn-reset btn btn--primary js-move-to">Перейти к покупкам</button>
    </div>
 </section>
