--- a/gulp-maxgraph/src/scss/components/_product.scss
+++ b/gulp-maxgraph/src/scss/components/_product.scss
@@ -16,6 +16,10 @@
     opacity: 0;
     visibility: hidden;
     transition: .3s all ease;
+
+    @include mobile {
+      opacity: 1;
+    }
   }
 
   &__image {
