--- a/gulp-maxgraph/src/partials/header.html
+++ b/gulp-maxgraph/src/partials/header.html
@@ -14,6 +14,9 @@
                <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
             </ul>
          </nav>
+         <button class="burger btn-reset">
+          <span class="burger__line"></span>
+         </button>
          <div class="cart header__cart">
             <button class="btn-reset cart__btn">
                <svg>
