--- a/gulp-maxgraph/src/scss/_vars.scss
+++ b/gulp-maxgraph/src/scss/_vars.scss
@@ -1,39 +1,52 @@
 // если вы хотите использовать sass-переменные - удалите root
 // colors
+@import "./mixins";
+
 :root {
-   // base
-   --font-family: "Open Sans", sans-serif;
-   --content-width: 1210px;
-   --container-offset: 15px;
-   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
+  // base
+  --font-family: "Open Sans", sans-serif;
+  --content-width: 1210px;
+  --container-offset: 15px;
+  --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
 
-   // colors
-   --color-white: #ffffff;
-   --color-grey: #B2B5BB;
-   --color-eastbay: #484283;
-   --color-cameo: #DBBBA9;
-   --color-jumbo: #808080;
-   --color-main: #444B58;
-   --color-main-hover: #31343C;
-   --color-accent: #F14F4F;
-   --color-accent-hover: #8C2828;
-   --color-bg: #FFF4EE;
-   --color-border: rgba(255, 255, 255, 0.5);
+  // colors
+  --color-white: #ffffff;
+  --color-grey: #B2B5BB;
+  --color-eastbay: #484283;
+  --color-cameo: #DBBBA9;
+  --color-jumbo: #808080;
+  --color-main: #444B58;
+  --color-main-hover: #31343C;
+  --color-accent: #F14F4F;
+  --color-accent-hover: #CC4949;
+  --color-bg: #FFF4EE;
+  --color-btn-active: #8C2828;
+  --color-border: rgba(255, 255, 255, 0.5);
 
-   // gaps
-   --grid-gap: 20px;
-   --big-offset: 60px;
-   --main-offset: 40px;
-   --second-offset: 20px;
-   --small-offset: 10px;
+  // gaps
+  --grid-gap: 20px;
+  --big-offset: 60px;
+  --main-offset: 40px;
+  --second-offset: 20px;
+  --small-offset: 10px;
 
-   // fonts
-   --font-family: "Intro", sans-serif;
-   --middle-high-bold: 700 30px / 140% var(--font-family);
-   --prehigh-regular: 600 20px / 20px var(--font-family);
-   --prehigh-book: 400 24px / 24px var(--font-family);
-   --middle-book: 400 16px / 140% var(--font-family);
-   --middle-regular: 600 16px / 140% var(--font-family);
-   --small-book: 400 14px / 140% var(--font-family);
+  // fonts
+  --font-family: "Intro", sans-serif;
+  --middle-high-bold: 700 30px / 140% var(--font-family);
+  --prehigh-regular: 600 20px / 20px var(--font-family);
+  --prehigh-book: 400 24px / 24px var(--font-family);
+  --middle-book: 400 16px / 140% var(--font-family);
+  --middle-regular: 600 16px / 140% var(--font-family);
+  --small-book: 400 14px / 140% var(--font-family);
 
+}
+
+@include mobile {
+  :root {
+    --grid-gap: 10px;
+    --big-offset: 30px;
+    --main-offset: 20px;
+    --second-offset: 14px;
+    --small-offset: 8px;
+  }
 }
