--- a/gulp-maxgraph/src/scss/components/_about.scss
+++ b/gulp-maxgraph/src/scss/components/_about.scss
@@ -1,76 +1,106 @@
 .about {
-   position: relative;
-   background-color: var(--color-eastbay);
-   height: 580px;
+  position: relative;
+  background-color: var(--color-eastbay);
+  height: 580px;
 
-   &__container {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      height: 100%;
-      position: relative;
-   }
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 100%;
+    position: relative;
 
-   &__figure {
-      position: absolute;
-      left: 0;
-      top: 0;
-   }
+    @include small-tablet {
+      height: auto;
+    }
+  }
 
-   &__text {
-      width: 45%;
-      color: var(--color-white);
-   }
+  &__figure {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
 
-   &__title {
-      margin-bottom: var(--second-offset);
-      color: var(--color-white);
-      margin-top: 220px;
-   }
+  &__text {
+    width: 45%;
+    color: var(--color-white);
 
-   &__descr {
-      font: var(--middle-book);
-   }
+    @include small-tablet {
+      transform: none;
+      width: 100%;
+    }
+  }
 
-   &__quote {
+  &__title {
+    margin-bottom: var(--second-offset);
+    color: var(--color-white);
+    margin-top: 220px;
+
+    @include small-tablet {
+      margin-top: 0;
+    }
+  }
+
+  &__descr {
+    font: var(--middle-book);
+  }
+
+  &__quote {
+    display: inline-block;
+    font: inherit;
+    margin-bottom: var(--second-offset);
+
+    ::before,
+    ::after {
+      display: none;
+    }
+  }
+
+  &__author {
+    display: flex;
+    justify-content: flex-end;
+    font: var(--prehigh-regular);
+    font-style: normal;
+    align-items: center;
+    transform: translateX(50px);
+
+    &::before {
+      content: "";
       display: inline-block;
-      font: inherit;
-      margin-bottom: var(--second-offset);
+      width: 30px;
+      height: 3px;
+      background-color: var(--color-white);
+      margin-right: var(--second-offset);
+    }
 
-      ::before,
-      ::after {
-         display: none;
-      }
-   }
+    @include big-tablet {
+      transform: none;
+    }
+  }
 
-   &__author {
-      display: flex;
-      justify-content: flex-end;
-      font: var(--prehigh-regular);
-      font-style: normal;
-      align-items: center;
-      transform: translateX(50px);
+  &__image {
+    position: absolute;
+    right: 100px;
+    clip-path: polygon(24.5% 0, 100% 0, 75.7% 100%, 0 100%);
+    width: 520px;
+    height: 580px;
+    overflow: hidden;
 
-      &::before {
-         content: "";
-         display: inline-block;
-         width: 30px;
-         height: 3px;
-         background-color: var(--color-white);
-         margin-right: var(--second-offset);
-      }
-   }
-
-   &__image {
-      position: absolute;
-      right: 100px;
-      clip-path: polygon(24.5% 0, 100% 0, 75.7% 100%, 0 100%);
-      width: 520px;
-      height: 580px;
-      overflow: hidden;
-   }
-
-   img {
+    img {
       height: 100%;
-   }
+    }
+
+    @include big-tablet {
+      right: 0;
+    }
+
+    @include small-tablet {
+      display: none;
+    }
+  }
+
+  @include small-tablet {
+    padding: var(--main-offset) 0;
+    height: auto;
+  }
 }
