--- a/gulp-maxgraph/src/scss/components/_contacts.scss
+++ b/gulp-maxgraph/src/scss/components/_contacts.scss
@@ -6,11 +6,21 @@
       display: flex;
       align-items: flex-start;
       justify-content: space-between;
+
+      @include tablet {
+        flex-wrap: wrap;
+      }
    }
 
    &__text {
       width: calc(100% - (680px + var(--second-offset)));
       margin-right: var(--second-offset);
+
+      @include tablet {
+        margin-right: 0;
+        margin-bottom: var(--second-offset);
+        width: 100%;
+      }
    }
 
    &__title {
@@ -37,14 +47,38 @@
       margin-bottom: var(--small-offset);
       font: var(--middle-high-bold);
       color: var(--color-main);
+      transition: color .3s ease-in-out;
+      outline: none;
+
+      &:focus {
+        color: var(--color-accent);
+      }
+
+      @include for-desktop {
+        &:hover {
+          color: var(--color-accent);
+        }
+      }
+
+      &:active {
+        color: var(--color-accent-hover);
+      }
    }
 
    &__address {
       display: block;
+
+      @include mobile {
+        font-size: 14px;
+      }
    }
 
    &__map {
       width: 680px;
       height: 500px;
+
+      @include tablet {
+        width: 100%;
+      }
    }
 }
