--- a/gulp-maxgraph/src/scss/components/_instagram.scss
+++ b/gulp-maxgraph/src/scss/components/_instagram.scss
@@ -1,83 +1,106 @@
 .instagram {
-   padding: var(--big-offset);
+  padding: var(--big-offset);
 
-   &__container {
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-   }
+  &__container {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
 
-   &__left {
-      width: 380px;
-      flex-shrink: 0;
-      margin-right: var(--small-offset);
-      background-color: var(--color-eastbay);
-      border-radius: 4px;
-   }
-
-   &__right {
-      height: 100%;
-      display: flex;
+    @include small-tablet {
       flex-direction: column;
       align-items: center;
-      width: calc(100% - (380px + var(--small-offset)));
-   }
+    }
+  }
 
-   &__title {
-      color: var(--color-white);
-      margin-bottom: var(--second-offset);
-   }
+  &__left {
+    width: 380px;
+    flex-shrink: 0;
+    margin-right: var(--small-offset);
+    background-color: var(--color-eastbay);
+    border-radius: 4px;
 
-   &__descr {
-      color: var(--color-white);
-      margin: 0;
-      max-width: 260px;
-      text-align: center;
-      font: var(--middle-book);
+    @include small-tablet {
       margin-bottom: var(--main-offset);
-   }
+    }
 
-   &__input {
-      margin-bottom: var(--small-offset);
-   }
-
-   &__btn {
+    @include mobile {
+      margin-right: 0;
       width: 100%;
-   }
+    }
+  }
 
-   &__content {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(2, 160px);
-      gap: 15px;
-   }
+  &__right {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: calc(100% - (380px + var(--small-offset)));
 
-   &__link {
-      margin-bottom: var(--second-offset);
-   }
-
-   &-photo {
-      display: block;
-      border-radius: 4px;
+    @include small-tablet {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+    }
+  }
 
-      &:nth-child(3) {
-         grid-column: 2 span;
-         grid-row: 2 span;
-      }
+  &__title {
+    color: var(--color-white);
+    margin-bottom: var(--second-offset);
+  }
 
-      &:nth-child(2) {
-         grid-row: 2;
-      }
-   }
+  &__descr {
+    color: var(--color-white);
+    margin: 0;
+    max-width: 260px;
+    text-align: center;
+    font: var(--middle-book);
+    margin-bottom: var(--main-offset);
+  }
+
+  &__input {
+    margin-bottom: var(--small-offset);
+  }
+
+  &__btn {
+    width: 100%;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 160px);
+    gap: 15px;
+  }
+
+  &__link {
+    margin-bottom: var(--second-offset);
+  }
+
+  &-photo {
+    display: block;
+    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    &:nth-child(3) {
+      grid-column: 2 span;
+      grid-row: 2 span;
+    }
+
+    &:nth-child(2) {
+      grid-row: 2;
+    }
+  }
+
+  @include mobile {
+    padding: 0;
+    margin-bottom: var(--big-offset);
+  }
 
 }
 
 .callback-form {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   padding: var(--main-offset) var(--second-offset);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--main-offset) var(--second-offset);
 }
