--- a/gulp-maxgraph/src/scss/components/_nav.scss
+++ b/gulp-maxgraph/src/scss/components/_nav.scss
@@ -1,49 +1,65 @@
- .nav {
-   &__list {
-     display: flex;
-     align-items: center;
-   }
+.nav {
+  &__list {
+    display: flex;
+    align-self: center;
 
-   &__item {
-     &:not(:last-child) {
-       margin-right: var(--main-offset);
-     }
-   }
+    @include tablet {
+      flex-direction: column;
+    }
+  }
 
-   &__link {
-     position: relative;
-     font: var(--small-book);
-     color: var(--color-white);
+  &__item {
+    &:not(:last-child) {
+      margin-right: var(--main-offset);
 
-     &::before {
-       content: "";
-       position: absolute;
-       left: 0;
-       bottom: 0;
-       width: 100%;
-       height: 1px;
-       background-color: currentColor;
-       transform-origin: left;
-       transform: scaleX(0);
-       transition: transform .3s ease-in-out;
-     }
+      @include tablet {
+        margin-right: 0;
+        margin-bottom: var(--main-offset);
+      }
+    }
+  }
 
-     &:focus {
+  &__link {
+    position: relative;
+    outline: none;
+    font: var(--small-book);
+    color: var(--color-white);
+    transition: opacity 0.3s ease-in-out;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: currentColor;
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    &:focus {
       &::before {
-       transform: scaleX(1);
+        transform: scaleX(1);
       }
     }
 
-     @include for-desktop {
-       &:hover {
-         &::before {
-          transform: scaleX(1);
-         }
-       }
-     }
+    @include tablet {
+      font: var(--prehigh-regular);
+    }
 
-     &:active {
+    @include desktop {
+      &:hover {
+        &::before {
+          transform: scaleX(1);
+        }
+      }
+    }
+
+    &:active {
       opacity: 0.8;
-     }
-   }
- }
+      transition: opacity 0.3s ease-in-out;
+    }
+  }
+}
