--- a/gulp-maxgraph/src/scss/components/_social.scss
+++ b/gulp-maxgraph/src/scss/components/_social.scss
@@ -1,26 +1,49 @@
 .social {
-   display: flex;
+  display: flex;
 
-   &__item {
-      &:not(:last-child) {
-         margin-right: var(--second-offset);
+  @include mobile {
+    justify-content: center;
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: var(--second-offset);
+      @include mobile {
+        margin-right: 40px;
       }
-   }
+    }
+  }
 
-   &__link {
-      display: block;
-      width: 44px;
-      height: 44px;
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
+  &__link {
+    display: block;
+    width: 44px;
+    height: 44px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    outline: none;
+    transition: opacity .3s ease-in-out;
 
-      &--vk {
-         background-image: url("../img/vk.svg");
+    &--vk {
+      background-image: url("../img/vk.svg");
+    }
+
+    &--insta {
+      background-image: url("../img/instagram.svg");
+    }
+
+    &:focus {
+      opacity: 0.7;
+    }
+
+    @include for-desktop {
+      &:hover {
+        opacity: 0.7;
       }
+    }
 
-      &--insta {
-         background-image: url("../img/instagram.svg");
-      }
-   }
+    &:active {
+      opacity: 0.9;
+    }
+  }
 }
