--- a/gulp-maxgraph/src/scss/components/_team.scss
+++ b/gulp-maxgraph/src/scss/components/_team.scss
@@ -17,6 +17,10 @@
       position: absolute;
       right: 0;
       top: 0;
+
+      @include small-tablet {
+        display: none;
+      }
    }
 
    &__item {
@@ -27,6 +31,10 @@
       overflow: hidden;
       border-radius: 4px;
       margin-bottom: var(--second-offset);
+
+      @include small-tablet {
+        width: 100%;
+      }
    }
 
    &__subtitle {
