--- a/gulp-maxgraph/src/scss/mixins/_breakpoint.scss
+++ b/gulp-maxgraph/src/scss/mixins/_breakpoint.scss
@@ -12,6 +12,12 @@
   }
 }
 
+@mixin big-tablet {
+  @media (max-width: (1160px)) {
+    @content;
+  }
+}
+
 @mixin tablet {
   @media (max-width: (1024px)) {
     @content;
